# OpenVINO_Code

./: .gitignore  CMakeLists.txt  README.md
CommonFiles/: helper.h
ImageClassification/: CMakeLists.txt  classifications.cpp  classifications.h  cls_main.cpp
InstanceSegmentation/: CMakeLists.txt  maskRCNN.cpp  maskRCNN.h  maskRCNN_main.cpp
ObjectDetection/: CMakeLists.txt  base_detector.cpp  base_detector.h  ssd_detector.cpp  ssd_detector.h  ssd_main.cpp  yolo_detector.cpp  yolo_detector.h  yolo_main.cpp
SemanticSegmentation/: CMakeLists.txt  Segmentation.cpp  Segmentation.h  main.cpp
